重构：将NodeList全部换为更可靠的ArrayList